Revert "fixing alignment of article info leading item blog"
This reverts commit 64ae271e6ecb2b89be60b8dbba1453310088f248.

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -7,9 +7,6 @@
 			}
 		}
 	}
-	.article-info-inner {
-		bottom: 15px;
-	}
 }
 @media (max-width: 979px) and (min-width: 768px) {
 
