--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2554,7 +2554,7 @@ legend {
 }
 
 .article-info-inner {
-	bottom: 32px;
+	bottom: 10px;
 	position: absolute;
 	right: 0;
 	width: 47.6%;
